# app/Http/Controllers/Api/V1/Controller.php
@@ -8,6 +8,15 @@ use OpenApi\Attributes as OA;
 #[OA\Info(
     version: '1.0.0',
     title: 'Test API bei GFU',
+),
+OA\Components(
+    securitySchemes: [
+        new OA\SecurityScheme(
+            securityScheme: 'bearerAuth',
+            type: 'http',
+            scheme: 'bearer',
+        )
+    ],
 )]
 class Controller extends BaseController
 {
